<resources>
    <string name="app_name">RoomSQL</string>
    <string name="nota">Movie:</string>
    <string name="moviename">Movie:</string>
    <string name="studio">Studio:</string>
    <string name="catedory">Category:</string>
    <string name="addmovie">Add Movie:</string>
    <string name="submit">Add Movie</string>
    <string name="movieagregar">Add Movie</string>
    <string name="action_settings">settings</string>
    <string name="Room">Select Movie</string>
    <string name="move">Movies</string>
    <string name="Movie">Movies Showroom</string>
    <string name="nommovie">Movie:</string>
    <string name="Moviesapp">Movie\'s App</string>
</resources>
