<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/add"
android:background="@drawable/layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/layout2"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:text="@string/addmovie"
            android:textStyle="bold"
            android:textSize="32sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textShortMessage"
            android:id="@+id/addmovie"
            android:maxLength="40"
            android:textColorHint="#3d5afe"
            android:textAlignment="center"
            android:layout_marginRight="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="64dp"
            android:shadowColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/moviename"
            android:textColor="#ffffff"
            />
        <EditText
            android:inputType="textShortMessage"
            android:id="@+id/addstudio"
            android:maxLength="20"
            android:textAlignment="center"
            android:textColorHint="#3d5afe"
            android:layout_marginRight="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:shadowColor="#ffffff"
            android:layout_height="wrap_content"
            android:hint="@string/studio"
            android:textColor="#ffffff"
            />
        <EditText
            android:id="@+id/addcategory"
            android:layout_marginRight="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:maxLength="20"
            android:inputType="textShortMessage"
            android:textColorLink="#ffffff"
            android:textColorHint="#3d5afe"
            android:shadowColor="#ffffff"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/catedory"
            android:textColor="#ffffff"
            />

        <Button
            android:id="@+id/button"
            android:layout_marginRight="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="@drawable/layout2"
            android:text="@string/movieagregar"/>


    </LinearLayout>




</FrameLayout>
